# PSP-recompilation-project

./: CREDITS.md  LICENSE  Makefile  README.md
src/ref/: cpu.h  interp.cpp  interp.h  run_elf.cpp  selftest.cpp
src/rt/: acx_verify.c  audio.c  driver.c  funcdiff.c  ge.c  ge_shared.h  gui.c  h264_mf.c  hle.c  iso.c  iso.h  mpeg.c  nid_names.h  osk_win.c  pgf.c  pgf.h  recomp.c  recomp.h  savedata.c  sched.c  vfpu_fuzz.c  vfpu_interp.c  viewer.c
src/rt/gpu_sdl3vk/: README.md  ge_gpu.c  ge_gpu.h  psp_frag.inc  psp_vert.inc  sdl3vk.c  sdl3vk.h
src/rt/gpu_sdl3vk/shaders/: psp.frag  psp.vert
src/rt/gpu_vk/: CMakeLists.txt  gpu_bridge.cpp  gpu_bridge.h  host_stubs.cpp
tools/: TRACE_FORMAT.md  analyze.py  codegen.py  codegen_gate.py  drive.ps1  funcdiff_cmp.py  gen_microtest.py  gen_nidnames.py  imports.py  microtest_gate.py  nidseq.py  ppm2png.py  ppmdiff.py  prxload.py  tracediff.py  vfpu_fuzz_gen.py
